Modify tox.ini to separate release test from normal test

--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,3 @@
-# Copyright (c) 2021 LG Electronics
-# SPDX-License-Identifier: Apache-2.0
 [tox]
 envlist = test_run
 skipdist = true
@@ -7,6 +5,8 @@ skipdist = true
 [testenv]
 install_command = pip install {opts} {packages}
 basepython= python3.6
+setenv =
+  PYTHONPATH=.
 
 [flake8]
 max-line-length = 145
@@ -16,11 +16,14 @@ exclude = .tox/*
 filterwarnings = ignore::DeprecationWarning
 
 [testenv:test_run]
+commands =
+    fosslight_reuse -h
+    fosslight_reuse -p src/ -r "test_result/reuse_result.xml"
+    fosslight_reuse -p src/ -f "fosslight_reuse/wrapper_reuse_lint.py" -r "test_result2/reuse_result.xml"
+
+[testenv:release]
 deps =
     -r{toxinidir}/requirements-dev.txt
-
-setenv =
-  PYTHONPATH=.
 
 commands =
     fosslight_reuse -h
