--- a/tox.ini
+++ b/tox.ini
@@ -7,6 +7,7 @@ skipdist = true
 [testenv]
 install_command = pip install {opts} {packages}
 basepython= python3.6
+whitelist_externals = cat
 setenv =
   PYTHONPATH=.
 
@@ -19,8 +20,11 @@ filterwarnings = ignore::DeprecationWarning
 
 [testenv:test_run]
 commands =
-    fosslight_reuse -p src/ -r "test_result/reuse_result.xml"
-    fosslight_reuse -p src/ -f "fosslight_reuse/wrapper_reuse_lint.py" -r "test_result2/reuse_result.xml"
+    fosslight_reuse lint -p src/ -o "test_result/reuse_result.xml"
+    fosslight_reuse lint -p src/ -f "fosslight_reuse/wrapper_reuse_lint.py" -o "test_result2/reuse_result.xml"
+    fosslight_reuse report -p tests/report
+    fosslight_reuse report -f tests/report/OSS-Report-Sample_1_BOM.xlsx -o test_report/output
+    cat test_report/output.yaml
 
 [testenv:release]
 deps =
@@ -28,6 +32,8 @@ deps =
 
 commands =
     fosslight_reuse -h
-    fosslight_reuse -p src/ -r "test_result/reuse_result.xml"
-    fosslight_reuse -p src/ -f "fosslight_reuse/wrapper_reuse_lint.py" -r "test_result2/reuse_result.xml"
+    fosslight_reuse lint -p src/ -o "test_result/reuse_result.xml"
+    fosslight_reuse lint -p src/ -f "fosslight_reuse/wrapper_reuse_lint.py" -o "test_result2/reuse_result.xml"
+    fosslight_reuse report -p tests/report
+    fosslight_reuse report -f tests/report/OSS-Report-Sample_1_BOM.xlsx -o test_report/output
     pytest -v --flake8
