--- a/.github/workflows/publish-release.yml
+++ b/.github/workflows/publish-release.yml
@@ -29,9 +29,47 @@ jobs:
         github_token: ${{ secrets.TOKEN }}
         branch: main
 
+  build:
+    name: Build packages
+    needs: update-changelog
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        include:
+          - os: windows-latest
+            TARGET: windows
+            CMD_BUILD: >
+                pyinstaller --onefile cli.py -n cli --additional-hooks-dir=hooks &&
+                move dist/cli.exe fosslight_reuse_windows.exe
+            OUT_FILE_NAME: fosslight_reuse_windows.exe
+            ASSET_MIME: application/vnd.microsoft.portable-executable
+    steps:
+    - uses: actions/checkout@v2
+    - name: Set up Python 3.6
+      uses: actions/setup-python@v2
+      with:
+        python-version: 3.6
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install .
+        pip install pyinstaller
+    - name: Build with pyinstaller for ${{matrix.TARGET}}
+      run: ${{matrix.CMD_BUILD}}
+    - name: Upload Release Asset
+      id: upload-release-asset
+      uses: actions/upload-release-asset@v1.0.1
+      env:
+        GITHUB_TOKEN: ${{ secrets.TOKEN }}
+      with:
+        upload_url: ${{ github.event.release.upload_url }}
+        asset_path: ./${{ matrix.OUT_FILE_NAME}}
+        asset_name: ${{ matrix.OUT_FILE_NAME}}
+        asset_content_type: ${{ matrix.ASSET_MIME}}
+
   deploy:
     runs-on: ubuntu-18.04
-    needs: update-changelog
+    needs: build
     steps:
     - uses: actions/checkout@v2
     - name: Set up Python
