--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -8,23 +8,39 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    name: Build packages
+    runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        python-version: [3.6]
+        include:
+          - os: ubuntu-latest
+            TARGET: ubuntu
+            CMD_BUILD: >
+                tox -e release
+            OUT_FILE_NAME: fosslight_bin_ubuntu18
+            ASSET_MIME: application/octet-stream
+          - os: windows-latest
+            TARGET: windows
+            CMD_BUILD: >
+                pyinstaller --onefile cli.py -n cli --additional-hooks-dir=hooks &&
+                move dist/cli.exe fosslight_reuse_windows.exe &&
+                ./fosslight_reuse_windows.exe
+            OUT_FILE_NAME: fosslight_reuse_windows.exe
+            ASSET_MIME: application/vnd.microsoft.portable-executable
     steps:
     - uses: actions/checkout@v2
-    - name: Set up Python ${{ matrix.python-version }}
+    - name: Set up Python 3.6
       uses: actions/setup-python@v2
       with:
-        python-version: ${{ matrix.python-version }}
+        python-version: 3.6
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install tox
-    - name: Run Tox
-      run: |
-        tox -e release
+        pip install .
+        pip install -r requirements-dev.txt
+        pip install pyinstaller
+    - name: Build with pyinstaller for ${{matrix.TARGET}}
+      run: ${{matrix.CMD_BUILD}}
   reuse:
     runs-on: ubuntu-latest
     steps: 
