--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 # Copyright (c) 2021 LG Electronics
-# SPDX-License-Identifier: Apache-2.0
+# SPDX-License-Identifier: GPL-3.0-only
 [tox]
 envlist = test_run
 skipdist = true
