--- a/.github/workflows/publish-release.yml
+++ b/.github/workflows/publish-release.yml
@@ -14,6 +14,7 @@ jobs:
     - uses: actions/checkout@v2
       with:
         fetch-depth: 0
+        ref: main
     - name: Get Release
       uses: agners/get-draft-release@v1.2.2
       id: get_release
@@ -65,6 +66,8 @@ jobs:
             ASSET_MIME: application/vnd.microsoft.portable-executable
     steps:
     - uses: actions/checkout@v2
+      with:
+        ref: main
     - name: Set up Python 3.6
       uses: actions/setup-python@v2
       with:
