--- a/tox.ini
+++ b/tox.ini
@@ -8,6 +8,8 @@ skipdist = true
 install_command = pip install {opts} {packages}
 basepython= python3.6
 whitelist_externals = cat
+                      cp
+                      rm
 setenv =
   PYTHONPATH=.
 
@@ -25,6 +27,9 @@ commands =
     fosslight_reuse report -p tests/report
     fosslight_reuse report -f tests/report/OSS-Report-Sample_1_BOM.xlsx -o test_report/output
     cat test_report/output.yaml
+    rm -rf tests/add_result
+    cp -rf tests/add tests/add_result
+    fosslight_reuse add -p tests/add_result -c "LGE" -l "GPL-3.0" -a
 
 [testenv:release]
 deps =
@@ -36,4 +41,7 @@ commands =
     fosslight_reuse lint -p src/ -f "fosslight_reuse/wrapper_reuse_lint.py" -o "test_result2/reuse_result.xml"
     fosslight_reuse report -p tests/report
     fosslight_reuse report -f tests/report/OSS-Report-Sample_1_BOM.xlsx -o test_report/output
+    rm -rf tests/add_result
+    cp -rf tests/add tests/add_result
+    fosslight_reuse add -p tests/add_result -c "LGE" -l "GPL-3.0" -a
     pytest -v --flake8
