Edit Copyright format

--- a/tox.ini
+++ b/tox.ini
@@ -29,7 +29,7 @@ commands =
     cat test_report/output.yaml
     rm -rf tests/add_result
     cp -rf tests/add tests/add_result
-    fosslight_reuse add -p tests/add_result -c "LGE" -l "GPL-3.0" -a
+    fosslight_reuse add -p tests/add_result -c "Copyright 2019-2021 LG Electronics Inc." -l "GPL-3.0"
 
 [testenv:release]
 deps =
@@ -43,5 +43,5 @@ commands =
     fosslight_reuse report -f tests/report/OSS-Report-Sample_1_BOM.xlsx -o test_report/output
     rm -rf tests/add_result
     cp -rf tests/add tests/add_result
-    fosslight_reuse add -p tests/add_result -c "LGE" -l "GPL-3.0" -a
+    fosslight_reuse add -p tests/add_result -c "2019-2021 LG Electronics Inc." -l "GPL-3.0"
     pytest -v --flake8
