--- a/tox.ini
+++ b/tox.ini
@@ -23,13 +23,13 @@ filterwarnings = ignore::DeprecationWarning
 [testenv:test_run]
 commands =
     fosslight_reuse lint -p src/ -o "test_result/reuse_result.xml"
-    fosslight_reuse lint -p src/ -f "fosslight_reuse/wrapper_reuse_lint.py" -o "test_result2/reuse_result.xml"
+    fosslight_reuse lint -p src/ -f "fosslight_reuse/_fosslight_reuse.py" -o "test_result2/reuse_result.xml"
     fosslight_reuse report -p tests/report
     fosslight_reuse report -f tests/report/OSS-Report-Sample_1_BOM.xlsx -o test_report/output
     cat test_report/output.yaml
     rm -rf tests/add_result
     cp -r tests/add tests/add_result
-    fosslight_reuse add -p tests/add_result -c "Copyright 2019-2021 LG Electronics Inc." -l "GPL-3.0"
+    fosslight_reuse add -p tests/add_result -c "2019-2021 LG Electronics Inc." -l "GPL-3.0-only"
 [testenv:release]
 deps =
     -r{toxinidir}/requirements-dev.txt
@@ -37,9 +37,9 @@ deps =
 commands =
     fosslight_reuse -h
     fosslight_reuse lint -p src/ -o "test_result/reuse_result.xml"
-    fosslight_reuse lint -p src/ -f "fosslight_reuse/wrapper_reuse_lint.py" -o "test_result2/reuse_result.xml"
+    fosslight_reuse lint -p src/ -f "fosslight_reuse/_fosslight_reuse.py" -o "test_result2/reuse_result.xml"
     fosslight_reuse report -p tests/report
     fosslight_reuse report -f tests/report/OSS-Report-Sample_1_BOM.xlsx -o test_report/output
     cp -r tests/add tests/add_result
-    fosslight_reuse add -p tests/add_result -c "Copyright 2019-2021 LG Electronics Inc." -l "GPL-3.0"
+    fosslight_reuse add -p tests/add_result -c "2019-2021 LG Electronics Inc." -l "GPL-3.0-only"
     pytest -v --flake8
