--- a/tox.ini
+++ b/tox.ini
@@ -29,7 +29,7 @@ commands =
     cat test_report/output.yaml
     rm -rf tests/add_result
     cp -r tests/add tests/add_result
-    fosslight_reuse add -p tests/add_result -c "Copyright 2019-2021 LG Electronics Inc." -l "GPL-3.0"
+    fosslight_reuse add -p tests/add_result -c "Copyright 2019-2021 LG Electronics Inc." -l "GPL-3.0-only"
 [testenv:release]
 deps =
     -r{toxinidir}/requirements-dev.txt
@@ -41,5 +41,5 @@ commands =
     fosslight_reuse report -p tests/report
     fosslight_reuse report -f tests/report/OSS-Report-Sample_1_BOM.xlsx -o test_report/output
     cp -r tests/add tests/add_result
-    fosslight_reuse add -p tests/add_result -c "Copyright 2019-2021 LG Electronics Inc." -l "GPL-3.0"
+    fosslight_reuse add -p tests/add_result -c "Copyright 2019-2021 LG Electronics Inc." -l "GPL-3.0-only"
     pytest -v --flake8
