--- a/tox.ini
+++ b/tox.ini
@@ -10,6 +10,7 @@ basepython= python3.6
 whitelist_externals = cat
                       cp
                       rm
+                      git
 setenv =
   PYTHONPATH=.
 
@@ -30,6 +31,8 @@ commands =
     rm -rf tests/add_result
     cp -r tests/add tests/add_result
     fosslight_reuse add -p tests/add_result -c "2019-2021 LG Electronics Inc." -l "GPL-3.0-only"
+    rm -rf reuse_example
+    git clone https://github.com/LGE-OSS/example.git reuse_example
 [testenv:release]
 deps =
     -r{toxinidir}/requirements-dev.txt
