Add license download function

--- a/tox.ini
+++ b/tox.ini
@@ -10,7 +10,6 @@ basepython= python3.6
 whitelist_externals = cat
                       cp
                       rm
-                      git
 setenv =
   PYTHONPATH=.
 
@@ -25,14 +24,12 @@ filterwarnings = ignore::DeprecationWarning
 commands =
     fosslight_reuse lint -p src/ -o "test_result/reuse_result.xml"
     fosslight_reuse lint -p src/ -f "fosslight_reuse/_fosslight_reuse.py" -o "test_result2/reuse_result.xml"
-    fosslight_reuse report -p tests/report
-    fosslight_reuse report -f tests/report/OSS-Report-Sample_1_BOM.xlsx -o test_report/output
-    cat test_report/output.yaml
+    fosslight_reuse convert -p tests/convert
+    fosslight_reuse convert -f tests/convert/OSS-Report-Sample_1_BOM.xlsx -o test_convert/output
+    cat test_convert/output.yaml
     rm -rf tests/add_result
     cp -r tests/add tests/add_result
     fosslight_reuse add -p tests/add_result -c "2019-2021 LG Electronics Inc." -l "GPL-3.0-only"
-    rm -rf reuse_example
-    git clone https://github.com/LGE-OSS/example.git reuse_example
 [testenv:release]
 deps =
     -r{toxinidir}/requirements-dev.txt
@@ -41,8 +38,8 @@ commands =
     fosslight_reuse -h
     fosslight_reuse lint -p src/ -o "test_result/reuse_result.xml"
     fosslight_reuse lint -p src/ -f "fosslight_reuse/_fosslight_reuse.py" -o "test_result2/reuse_result.xml"
-    fosslight_reuse report -p tests/report
-    fosslight_reuse report -f tests/report/OSS-Report-Sample_1_BOM.xlsx -o test_report/output
+    fosslight_reuse convert -p tests/convert
+    fosslight_reuse convert -f tests/convert/OSS-Report-Sample_1_BOM.xlsx -o test_convert/output
     cp -r tests/add tests/add_result
     fosslight_reuse add -p tests/add_result -c "2019-2021 LG Electronics Inc." -l "GPL-3.0-only"
     pytest -v --flake8
