Add code for license text download

--- a/tox.ini
+++ b/tox.ini
@@ -28,9 +28,11 @@ commands =
     fosslight_reuse convert -f tests/convert/OSS-Report-Sample_1_BOM.xlsx -o test_convert/output
     cat test_convert/output.yaml
     rm -rf tests/add_result
+    rm -rf tests/add/LICENSES
+    rm -rf tests/add/LICENSE
     cp -r tests/add tests/add_result
     fosslight_reuse add -p tests/add_result -c "2019-2021 LG Electronics Inc." -l "GPL-3.0-only"
-    rm -rf reuse_example
+    fosslight_reuse add -p tests/add -l EPL-1.0
 [testenv:release]
 deps =
     -r{toxinidir}/requirements-dev.txt
@@ -43,4 +45,5 @@ commands =
     fosslight_reuse convert -f tests/convert/OSS-Report-Sample_1_BOM.xlsx -o test_convert/output
     cp -r tests/add tests/add_result
     fosslight_reuse add -p tests/add_result -c "2019-2021 LG Electronics Inc." -l "GPL-3.0-only"
+    fosslight_reuse add -p tests/add -l EPL-1.0
     pytest -v --flake8
