--- a/tox.ini
+++ b/tox.ini
@@ -23,9 +23,9 @@ filterwarnings = ignore::DeprecationWarning
 [testenv:test_run]
 commands =
     fosslight_reuse lint -p src/ -o "test_result/reuse_result.xml"
-    fosslight_reuse lint -p src/ -f "fosslight_reuse/_fosslight_reuse.py" -o "test_result2/reuse_result.xml"
+    fosslight_reuse lint -p src/ -f xml -o "test_result2/reuse_result.xml"
     fosslight_reuse convert -p tests/convert
-    fosslight_reuse convert -f tests/convert/OSS-Report-Sample_1_BOM.xlsx -o test_convert/output
+    fosslight_reuse convert -p tests/convert/OSS-Report-Sample_1_BOM.xlsx -o test_convert/output
     cat test_convert/output.yaml
     rm -rf tests/add_result
     rm -rf tests/add/LICENSES
@@ -40,9 +40,9 @@ deps =
 commands =
     fosslight_reuse -h
     fosslight_reuse lint -p src/ -o "test_result/reuse_result.xml"
-    fosslight_reuse lint -p src/ -f "fosslight_reuse/_fosslight_reuse.py" -o "test_result2/reuse_result.xml"
+    #fosslight_reuse lint -p src/ -f "fosslight_reuse/_fosslight_reuse.py" -o "test_result2/reuse_result.xml"
     fosslight_reuse convert -p tests/convert
-    fosslight_reuse convert -f tests/convert/OSS-Report-Sample_1_BOM.xlsx -o test_convert/output
+    fosslight_reuse convert -p tests/convert/OSS-Report-Sample_1_BOM.xlsx -o test_convert/output
     cp -r tests/add tests/add_result
     fosslight_reuse add -p tests/add_result -c "2019-2021 LG Electronics Inc." -l "GPL-3.0-only"
     fosslight_reuse add -p tests/add -l EPL-1.0
