--- a/tox.ini
+++ b/tox.ini
@@ -23,7 +23,7 @@ filterwarnings = ignore::DeprecationWarning
 [testenv:test_run]
 commands =
     fosslight_reuse lint -p src/ -o "test_result/reuse_result.xml"
-    fosslight_reuse lint -p src/ -f xml -o "test_result2/reuse_result.xml"
+    fosslight_reuse lint -p src/ -f yaml -o "test_result2/reuse_result.yaml"
     fosslight_reuse convert -p tests/convert
     fosslight_reuse convert -p tests/convert/OSS-Report-Sample_1_BOM.xlsx -o test_convert/output
     cat test_convert/output.yaml
@@ -40,7 +40,7 @@ deps =
 commands =
     fosslight_reuse -h
     fosslight_reuse lint -p src/ -o "test_result/reuse_result.xml"
-    #fosslight_reuse lint -p src/ -f "fosslight_reuse/_fosslight_reuse.py" -o "test_result2/reuse_result.xml"
+    fosslight_reuse lint -p src/ -f yaml -o "test_result2/reuse_result.yaml"
     fosslight_reuse convert -p tests/convert
     fosslight_reuse convert -p tests/convert/OSS-Report-Sample_1_BOM.xlsx -o test_convert/output
     cp -r tests/add tests/add_result
