--- a/tox.ini
+++ b/tox.ini
@@ -22,7 +22,7 @@ filterwarnings = ignore::DeprecationWarning
 
 [testenv:test_run]
 commands =
-    fosslight_reuse lint -p src/ -o "test_result/reuse_result.xml"
+    fosslight_reuse lint -p src/ -o "test_result/reuse_result.yaml"
     fosslight_reuse lint -p src/ -f yaml -o "test_result2/reuse_result.yaml"
     fosslight_reuse convert -p tests/convert
     fosslight_reuse convert -p tests/convert/OSS-Report-Sample_1_BOM.xlsx -o test_convert/output
@@ -39,7 +39,7 @@ deps =
 
 commands =
     fosslight_reuse -h
-    fosslight_reuse lint -p src/ -o "test_result/reuse_result.xml"
+    fosslight_reuse lint -p src/ -o "test_result/reuse_result.yaml"
     fosslight_reuse lint -p src/ -f yaml -o "test_result2/reuse_result.yaml"
     fosslight_reuse convert -p tests/convert
     fosslight_reuse convert -p tests/convert/OSS-Report-Sample_1_BOM.xlsx -o test_convert/output
