--- a/tox.ini
+++ b/tox.ini
@@ -22,28 +22,28 @@ filterwarnings = ignore::DeprecationWarning
 
 [testenv:test_run]
 commands =
-    fosslight_reuse lint -p src/ -o "test_result/reuse_result.yaml"
-    fosslight_reuse lint -p src/ -f yaml -o "test_result2/reuse_result.yaml"
-    fosslight_reuse convert -p tests/convert
-    fosslight_reuse convert -p tests/convert/OSS-Report-Sample_1_BOM.xlsx -o test_convert/output
+    fosslight_precheck lint -p src/ -o "test_result/precheck_result.yaml"
+    fosslight_precheck lint -p src/ -f yaml -o "test_result2/precheck_result.yaml"
+    fosslight_precheck convert -p tests/convert
+    fosslight_precheck convert -p tests/convert/OSS-Report-Sample_1_BOM.xlsx -o test_convert/output
     cat test_convert/output.yaml
     rm -rf tests/add_result
     rm -rf tests/add/LICENSES
     rm -rf tests/add/LICENSE
     cp -r tests/add tests/add_result
-    fosslight_reuse add -p tests/add_result -c "2019-2021 LG Electronics Inc." -l "GPL-3.0-only"
-    fosslight_reuse add -p tests/add -l EPL-1.0
+    fosslight_precheck add -p tests/add_result -c "2019-2021 LG Electronics Inc." -l "GPL-3.0-only"
+    fosslight_precheck add -p tests/add -l EPL-1.0
 [testenv:release]
 deps =
     -r{toxinidir}/requirements-dev.txt
 
 commands =
-    fosslight_reuse -h
-    fosslight_reuse lint -p src/ -o "test_result/reuse_result.yaml"
-    fosslight_reuse lint -p src/ -f yaml -o "test_result2/reuse_result.yaml"
-    fosslight_reuse convert -p tests/convert
-    fosslight_reuse convert -p tests/convert/OSS-Report-Sample_1_BOM.xlsx -o test_convert/output
+    fosslight_precheck -h
+    fosslight_precheck lint -p src/ -o "test_result/precheck_result.yaml"
+    fosslight_precheck lint -p src/ -f yaml -o "test_result2/precheck_result.yaml"
+    fosslight_precheck convert -p tests/convert
+    fosslight_rprecheck convert -p tests/convert/OSS-Report-Sample_1_BOM.xlsx -o test_convert/output
     cp -r tests/add tests/add_result
-    fosslight_reuse add -p tests/add_result -c "2019-2021 LG Electronics Inc." -l "GPL-3.0-only"
-    fosslight_reuse add -p tests/add -l EPL-1.0
+    fosslight_precheck add -p tests/add_result -c "2019-2021 LG Electronics Inc." -l "GPL-3.0-only"
+    fosslight_precheck add -p tests/add -l EPL-1.0
     pytest -v --flake8
