--- a/tests/convert/oss-pkg-info.yaml
+++ b/tests/convert/oss-pkg-info.yaml
@@ -1,34 +1,36 @@
-libidn:
-- version: "1.5"
-  source name or path:
+Open Source Software Package:
+- name: libidn
+  version: 1.5
+  source: http://ftp.gnu.org/gnu/libidn
+  homepage: https://www.gnu.org/software/libidn
+  license:
+  - GPL-3.0
+  - LGPL-2.1
+  file: 
   - a.c
   - b.c
-  license:
-  - "GPL-3.0"
-  - "LGPL-2.1"
-  download location: "http://ftp.gnu.org/gnu/libidn"
-  homepage: "https://www.gnu.org/software/libidn"
-  copyright text: "Copyright (c) 2002-2007, Simon Josefsson"
-node-backoff:
-- version: "2.5.0"
-  source name or path: "src/*"
-  license: "MIT"
-  download location: "https://github.com/MathieuTurcotte/node-backoff"
-  homepage: "https://www.npmjs.com/package/backoff"
-  copyright text: "Copyright (c) 2012 Mathieu Turcotte"
+  copyright: Copyright (c) 2002-2007, Simon Josefsson
+- name: node-backoff
+  version: 2.5.0
+  source: https://github.com/MathieuTurcotte/node-backoff
+  homepage: https://www.npmjs.com/package/backoff
+  license: MIT
+  file: src/*
+  copyright: Copyright (c) 2012 Mathieu Turcotte
   exclude: True
-rsync:
-- version: "2.6.9"
-  source name or path: "test/tool"
-  license: "GPL-2.0"
-  download location: "https://download.samba.org/pub/rsync/src"
-  homepage: "http://rsync.samba.org"
-- version: "3.1.2"
-  source name or path: "test/tool"
-  license: "GPL-3.0"
-  download location: "https://download.samba.org/pub/rsync/src"
-  homepage: "http://rsync.samba.org"
-  copyright text:
-  - "Copyright (c) 1996 Andrew Tridgell"
-  - "Copyright (c) 1996 Paul Mackerras"
-  - "Copyright (c) 2003-2015 Wayne Davison"
+- name: rsync
+  version: 2.6.9
+  source: https://download.samba.org/pub/rsync/src
+  homepage: http://rsync.samba.org
+  license: GPL-2.0
+  file: test/tool
+- name: rsync
+  version: 3.1.2
+  source: https://download.samba.org/pub/rsync/src
+  homepage: http://rsync.samba.org
+  license: GPL-3.0
+  file: test/tool
+  copyright text: |
+    Copyright (c) 1996 Andrew Tridgell
+    Copyright (c) 1996 Paul Mackerras
+    Copyright (c) 2003-2015 Wayne Davison
