--- a/tox.ini
+++ b/tox.ini
@@ -1,7 +1,7 @@
 # Copyright (c) 2021 LG Electronics
 # SPDX-License-Identifier: GPL-3.0-only
 [tox]
-envlist = test_run
+envlist = {ubuntu, windows}
 skipdist = true
 
 [testenv]
@@ -9,6 +9,9 @@ install_command = pip install {opts} {packages}
 whitelist_externals = cat
                       cp
                       rm
+                      cmd
+                      del
+                      copy
 setenv =
   PYTHONPATH=.
 
@@ -19,17 +22,30 @@ exclude = .tox/*
 [pytest]
 filterwarnings = ignore::DeprecationWarning
 
-[testenv:test_run]
+[testenv:windows]
+commands = 
+    fosslight_prechecker lint -p src -o "test_result\prechecker_result.yaml"
+    fosslight_prechecker lint -p src -f yaml -o "test_result2\prechecker_result.yaml"
+    fosslight_prechecker convert -p "tests\convert"
+    cmd /c del /s/q tests\add_result
+    cmd /c del /s/q tests\add\LICENSES
+    cmd /c del /s/q tests\add\LICENSE
+    cmd /c copy tests\add tests\add_result
+    fosslight_prechecker add -p "tests\add_result" -c "2019-2021 LG Electronics Inc." -l "GPL-3.0-only"
+    fosslight_prechecker add -p "tests\add" -l "EPL-1.0"
+
+[testenv:ubuntu]
 commands =
     fosslight_prechecker lint -p src/ -o "test_result/prechecker_result.yaml"
     fosslight_prechecker lint -p src/ -f yaml -o "test_result2/prechecker_result.yaml"
-    fosslight_prechecker convert -p tests/convert
+    fosslight_prechecker convert -p "tests/convert"
     rm -rf tests/add_result
     rm -rf tests/add/LICENSES
     rm -rf tests/add/LICENSE
     cp -r tests/add tests/add_result
-    fosslight_prechecker add -p tests/add_result -c "2019-2021 LG Electronics Inc." -l "GPL-3.0-only"
-    fosslight_prechecker add -p tests/add -l EPL-1.0
+    fosslight_prechecker add -p "tests/add_result" -c "2019-2021 LG Electronics Inc." -l "GPL-3.0-only"
+    fosslight_prechecker add -p "tests/add" -l "EPL-1.0"
+
 [testenv:release]
 deps =
     -r{toxinidir}/requirements-dev.txt
