Use allowlist_externals instead of whitelist_externals

--- a/tox.ini
+++ b/tox.ini
@@ -6,7 +6,7 @@ skipdist = true
 
 [testenv]
 install_command = pip install {opts} {packages}
-whitelist_externals = cat
+allowlist_externals = cat
                       cp
                       rm
                       cmd
