--- a/.github/workflows/publish-release.yml
+++ b/.github/workflows/publish-release.yml
@@ -91,7 +91,7 @@ jobs:
         asset_content_type: ${{ matrix.ASSET_MIME}}
 
   deploy:
-    runs-on: ubuntu-18.04
+    runs-on: ubuntu-latest
     needs: build
     steps:
     - uses: actions/checkout@v3
