Add test case for adding url

--- a/tox.ini
+++ b/tox.ini
@@ -33,6 +33,7 @@ commands =
     cmd /c copy tests\add tests\add_result
     fosslight_prechecker add -p "tests\add_result" -c "2019-2021 LG Electronics Inc." -l "GPL-3.0-only"
     fosslight_prechecker add -p "tests\add" -l "EPL-1.0"
+    fosslight_prechecker add -p "tests\add" -u "https://github.com/fosslight/fosslight_prechecker/"
 
 [testenv:ubuntu]
 commands =
@@ -45,6 +46,7 @@ commands =
     cp -r tests/add tests/add_result
     fosslight_prechecker add -p "tests/add_result" -c "2019-2021 LG Electronics Inc." -l "GPL-3.0-only"
     fosslight_prechecker add -p "tests/add" -l "EPL-1.0"
+    fosslight_prechecker add -p "tests/add" -u "https://github.com/fosslight/fosslight_prechecker/"
 
 [testenv:release]
 deps =
@@ -58,4 +60,5 @@ commands =
     cp -r tests/add tests/add_result
     fosslight_prechecker add -p tests/add_result -c "2019-2021 LG Electronics Inc." -l "GPL-3.0-only"
     fosslight_prechecker add -p tests/add -l EPL-1.0
+    fosslight_prechecker add -p tests/add -u "https://github.com/fosslight/fosslight_prechecker/"
     pytest -v --flake8
