Supports for excluding paths in lint mode
Signed-off-by: SeongjunJo <gukcvts679@snu.ac.kr>

--- a/tox.ini
+++ b/tox.ini
@@ -26,6 +26,7 @@ filterwarnings = ignore::DeprecationWarning
 commands = 
     fosslight_prechecker lint -p src -o "test_result\prechecker_result.yaml"
     fosslight_prechecker lint -p src -f yaml -o "test_result2\prechecker_result.yaml"
+    fosslight_prechecker lint -p tests -e convert add\test_no_license.py -o "test_result3\prechecker_result.yaml"
     fosslight_prechecker convert -p "tests\convert"
     cmd /c del /s/q tests\add_result
     cmd /c del /s/q tests\add\LICENSES
@@ -39,6 +40,7 @@ commands =
 commands =
     fosslight_prechecker lint -p src/ -o "test_result/prechecker_result.yaml"
     fosslight_prechecker lint -p src/ -f yaml -o "test_result2/prechecker_result.yaml"
+    fosslight_prechecker lint -p tests/ -e convert add/test_no_license.py -o "test_result3/prechecker_result.yaml"
     fosslight_prechecker convert -p "tests/convert"
     rm -rf tests/add_result
     rm -rf tests/add/LICENSES
@@ -56,6 +58,7 @@ commands =
     fosslight_prechecker -h
     fosslight_prechecker lint -p src/ -o "test_result/prechecker_result.yaml"
     fosslight_prechecker lint -p src/ -f yaml -o "test_result2/prechecker_result.yaml"
+    fosslight_prechecker lint -p tests -e convert add/test_no_license.py -o "test_result3/prechecker_result.yaml"
     fosslight_prechecker convert -p tests/convert
     cp -r tests/add tests/add_result
     fosslight_prechecker add -p tests/add_result -c "2019-2021 LG Electronics Inc." -l "GPL-3.0-only"
