Modify to download lic. text from LGE DB

--- a/tox.ini
+++ b/tox.ini
@@ -12,6 +12,7 @@ allowlist_externals = cat
                       cmd
                       del
                       copy
+                      pytest
 setenv =
   PYTHONPATH=.
 
@@ -37,7 +38,10 @@ commands =
     fosslight_prechecker add -p "tests\add" -u "https://github.com/fosslight/fosslight_prechecker/"
 
 [testenv:ubuntu]
+deps =
+    -r{toxinidir}/requirements-dev.txt
 commands =
+    pytest -v --flake8 src
     fosslight_prechecker lint -p src/ -o "test_result/prechecker_result.yaml"
     fosslight_prechecker lint -p src/ -f yaml -o "test_result2/prechecker_result.yaml"
     fosslight_prechecker lint -p tests/ -e convert add/test_no_license.py -o "test_result3/prechecker_result.yaml"
@@ -53,8 +57,8 @@ commands =
 [testenv:release]
 deps =
     -r{toxinidir}/requirements-dev.txt
-
 commands =
+    pytest -v --flake8 src
     fosslight_prechecker -h
     fosslight_prechecker lint -p src/ -o "test_result/prechecker_result.yaml"
     fosslight_prechecker lint -p src/ -f yaml -o "test_result2/prechecker_result.yaml"
@@ -64,4 +68,9 @@ commands =
     fosslight_prechecker add -p tests/add_result -c "2019-2021 LG Electronics Inc." -l "GPL-3.0-only"
     fosslight_prechecker add -p tests/add -l EPL-1.0
     fosslight_prechecker add -p tests/add -u "https://github.com/fosslight/fosslight_prechecker/"
-    pytest -v --flake8
+
+[testenv:flake8]
+deps =
+    -r{toxinidir}/requirements-dev.txt
+commands = 
+    pytest -v --flake8 src
